# djangocms-transfer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  MANIFEST.in  Pipfile  README.rst  addon.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml  lint.yml  publish-to-test-pypi.yml  test.yml
.tx/: config
djangocms_transfer/: __init__.py  apps.py  base_config.py  cms_plugins.py  cms_toolbars.py  compat.py  config_registry.py  datastructures.py  exceptions.py  exporter.py  forms.py  helpers.py  importer.py  utils.py
djangocms_transfer/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_transfer/locale/en/LC_MESSAGES/: django.mo  django.po
djangocms_transfer/locale/es/LC_MESSAGES/: django.mo  django.po
djangocms_transfer/locale/fr/LC_MESSAGES/: django.mo  django.po
djangocms_transfer/serializers/: django_cms.py
djangocms_transfer/static/djangocms_transfer/css/: transfer.css
tests/: abstract.py  conftest.py  settings.py  test_forms.py  test_import.py  test_migrations.py  test_plugins.py  test_toolbar.py  urls.py
tests/requirements/: base.txt  dj31_cms38.txt  dj32_cms310.txt  dj32_cms38.txt  dj40_cms10.txt  dj41_cms311.txt  dj52_cms41.txt  dj52_cms50.txt
tests/test_app/: cms_plugins.py  models.py
tests/transfer/: abstract.py  test_export.py  test_forms.py  test_helper.py  test_import.py  test_plugins.py
tools/: black
